@@ -5,34 +5,42 @@ import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+import net.minecraft.client.model.GhastModel;
 import net.minecraft.client.model.HierarchicalModel;
-import net.minecraft.client.model.SpiderModel;
 import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.world.entity.Entity;
 import net.tinyallies.util.ModUtil;
-import org.spongepowered.asm.mixin.*;
+import org.spongepowered.asm.mixin.Final;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Shadow;
+import org.spongepowered.asm.mixin.Unique;
+
+import java.util.List;
 @Environment(EnvType.CLIENT)
-@Mixin(SpiderModel.class)
-public abstract class MixinSpiderModel <T extends Entity> extends HierarchicalModel<T> {
-	@Mutable @Shadow @Final private ModelPart root, head, rightHindLeg, leftHindLeg, rightMiddleHindLeg, leftMiddleHindLeg, rightMiddleFrontLeg, leftMiddleFrontLeg, rightFrontLeg, leftFrontLeg;
+@Mixin(GhastModel.class)
+public abstract class MixinGhastModel <T extends Entity> extends HierarchicalModel<T> {
+
+	@Shadow @Final private ModelPart root;
+	@Shadow @Final private ModelPart[] tentacles;
 
 	@Override
 	public void renderToBuffer(PoseStack pPoseStack, VertexConsumer pBuffer, int pPackedLight, int pPackedOverlay, float pRed, float pGreen, float pBlue, float pAlpha) {
-		if(this.young){ModUtil.babyfyModel(headParts(), bodyParts(), 11F, 1F, pPoseStack, pBuffer, pPackedLight, pPackedOverlay, pRed,
-				pGreen, pBlue, pAlpha);}
-		else{
+		if (this.young) {
+			ModUtil.babyfyModel(headParts(), bodyParts(), 14F, 0F, pPoseStack, pBuffer, pPackedLight, pPackedOverlay,
+					pRed, pGreen, pBlue, pAlpha);
+		}
+		else {
 			super.renderToBuffer(pPoseStack, pBuffer, pPackedLight, pPackedOverlay, pRed, pGreen, pBlue, pAlpha);
 		}
 	}
 
 	@Unique
 	protected Iterable<ModelPart> headParts() {
-		return ImmutableList.of(this.head);
+		return ImmutableList.of(root.getChild("body"));
 	}
 
 	@Unique
 	protected Iterable<ModelPart> bodyParts() {
-		return ImmutableList.of(root.getChild("body0"),root.getChild("body1"), rightHindLeg, leftHindLeg, rightMiddleHindLeg, leftMiddleHindLeg,
-				rightMiddleFrontLeg, leftMiddleFrontLeg, rightFrontLeg, leftFrontLeg);
+		return List.of(tentacles);
 	}
 }
